--- a/application.yml
+++ b/application.yml
@@ -5,11 +5,11 @@
 # Property used on app startup to check the config server status
 configserver:
     name: JHipster Registry config server
-    status: Connected to the JHipster Registry config server, using https://github.com/jhipster/jhipster-registry-sample-config !
+    status: Connected to the JHipster Registry config server, using https://github.com/rDrake79/jhregistry !
 
 # Default JWT secret token (to be changed in production!)
 jhipster:
     security:
         authentication:
             jwt:
-                secret: my-secret-token-to-change-in-production
+                secret: jhregistrysecretjwt
